--- a/index.html
+++ b/index.html
@@ -11,12 +11,51 @@
     <title>BPM2FPS</title>
   </head>
   <body>
-    <h1>BPM2FPS</h1>
+    <div class="container">
+      <h1>BPM2FPS</h1>
+
+      <form>
+        <div class="form-group row">
+          <label for="bpmInput" class="col-sm-2 col-form-label">BPM</label>
+          <div class="col-sm-10">
+            <input type="number" id="bpmInput" class="form-control" value="120" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="divInput" class="col-sm-2 col-form-label">Beat Divider</label>
+          <div class="col-sm-10">
+            <input type="number" id="divInput" class="form-control" value="4" min="1" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="fpsOutput" class="col-sm-2 col-form-label">FPS</label>
+          <div class="col-sm-10">
+            <input type="text" id="fpsOutput" class="form-control" readonly="readonly" />
+          </div>
+        </div>
+      </form>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script>
+      var bpmInputElem = document.getElementById("bpmInput");
+      var divInputElem = document.getElementById("divInput");
+      bpmInputElem.addEventListener("change", onChange);
+      divInputElem.addEventListener("change", onChange);
+      onChange(null);
+
+      function onChange(event) {
+        var bpm = parseFloat(bpmInputElem.value);
+        var divider = parseFloat(divInputElem.value);
+        var minFps = 60;
+        var framesPerBeat = Math.ceil(60 * minFps / bpm / divider) * divider;
+        document.getElementById("fpsOutput").value = `${bpm * framesPerBeat}/60`;
+      }
+    </script>
   </body>
 </html>
