--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>BPM2FPS</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="max-width: 540px">
       <h1>BPM2FPS</h1>
 
       <form>
