--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
       <form>
         <div class="form-group row">
-          <label for="bpmInput" class="col-sm-2 col-form-label">BPM</label>
-          <div class="col-sm-10">
-            <input type="number" id="bpmInput" class="form-control" value="120" />
+          <label for="bpmInput" class="col-sm-3 col-form-label">BPM</label>
+          <div class="col-sm">
+            <input type="number" id="bpmInput" class="form-control" value="120" min="1" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="divInput" class="col-sm-2 col-form-label">Beat Divider</label>
-          <div class="col-sm-10">
+          <label for="divInput" class="col-sm-3 col-form-label">Beat Divider</label>
+          <div class="col-sm">
             <input type="number" id="divInput" class="form-control" value="4" min="1" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="fpsOutput" class="col-sm-2 col-form-label">FPS</label>
-          <div class="col-sm-10">
+          <label for="fpsOutput" class="col-sm-3 col-form-label">FPS</label>
+          <div class="col-sm">
             <input type="text" id="fpsOutput" class="form-control" readonly="readonly" />
           </div>
         </div>
