--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-    <title>BPM2FPS</title>
+    <title>BPM2FPS - Calculate the optimal frame rate for music video authoring</title>
   </head>
   <body>
     <div class="container" style="max-width: 540px">
       <h1>BPM2FPS</h1>
+      <p class="lead mb-4">Calculate the optimal frame rate for music video authoring</p>
 
       <form>
         <div class="form-group row">
