--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
       <form>
         <div class="form-group row">
-          <label for="bpmInput" class="col-sm-3 col-form-label">BPM</label>
+          <label for="bpmInput" class="col-sm-3 col-form-label-lg">BPM</label>
           <div class="col-sm">
-            <input type="number" id="bpmInput" class="form-control" value="120" min="1" />
+            <input type="number" id="bpmInput" class="form-control form-control-lg" value="120" min="1" />
           </div>
         </div>
         <div class="form-group row">
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="fpsOutput" class="col-sm-3 col-form-label">FPS</label>
+          <label for="fpsOutput" class="col-sm-3 col-form-label-lg">FPS</label>
           <div class="col-sm">
-            <input type="text" id="fpsOutput" class="form-control" readonly="readonly" />
+            <input type="text" id="fpsOutput" class="form-control form-control-lg" readonly="readonly" />
           </div>
         </div>
         <div class="form-group row">
