Add margin-top into container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>BPM2FPS - Calculate the optimal frame rate for music video authoring</title>
   </head>
   <body>
-    <div class="container" style="max-width: 540px">
+    <div class="container mt-sm-5" style="max-width: 540px">
       <h1>BPM2FPS</h1>
       <p class="lead mb-4">Calculate the optimal frame rate for music video authoring</p>
 
