Add placeholder into inputs

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <div class="form-group row">
           <label for="bpmInput" class="col-sm-3 col-form-label-lg">BPM</label>
           <div class="col-sm">
-            <input type="number" id="bpmInput" class="form-control form-control-lg" value="120" min="1" />
+            <input type="number" id="bpmInput" class="form-control form-control-lg" value="100" min="1" placeholder="100" autofocus="autofocus" />
           </div>
         </div>
         <div class="form-group row">
           <label for="divInput" class="col-sm-3 col-form-label">Beat Divider</label>
           <div class="col-sm">
-            <input type="number" id="divInput" class="form-control" value="4" min="1" />
+            <input type="number" id="divInput" class="form-control" value="4" min="1" placeholder="4" />
           </div>
         </div>
         <div class="form-group row">
           <label for="minFpsInput" class="col-sm-3 col-form-label">Minimum FPS</label>
           <div class="col-sm">
-            <input type="number" id="minFpsInput" class="form-control" value="60" min="1" />
+            <input type="number" id="minFpsInput" class="form-control" value="30" min="1" placeholder="30" />
           </div>
         </div>
         <hr />
