--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           </div>
         </div>
       </form>
+      <footer class="my-5 text-center text-muted">
+        <p><small>&copy; 2019 <a href="https://github.com/neofuji">Toru Higuruma</a></small></p>
+        <p><small><a href="https://github.com/neofuji/bpm2fps">Source Code</a> (Apache License 2.0)</small></p>
+      </footer>
     </div>
 
     <!-- Optional JavaScript -->
