--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
   </head>
   <body>
     <div class="container mt-sm-5" style="max-width: 540px">
-      <h1>BPM2FPS</h1>
-      <p class="lead mb-4">Calculate the optimal frame rate for music video authoring</p>
+      <header class="mb-4">
+        <h1>BPM2FPS</h1>
+        <p class="lead">Calculate the optimal frame rate for music video authoring</p>
+      </header>
 
       <form>
         <div class="form-group row">
