Add border into outputs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <label for="fpsOutput" class="col-sm-3 col-form-label-lg">FPS</label>
           <div class="col-sm">
             <div class="input-group input-group-lg">
-              <input type="text" id="fpsOutput" class="form-control form-control-lg" readonly="readonly" />
+              <input type="text" id="fpsOutput" class="form-control form-control-lg border-secondary" readonly="readonly" />
               <div class="input-group-append">
                 <button type="button" class="btn btn-outline-secondary" id="fpsCopyButton">Copy</button>
               </div>
@@ -69,7 +69,7 @@
           <label for="fpsROutput" class="col-sm-3 col-form-label">FPS &#x211A;</label>
           <div class="col-sm">
             <div class="input-group">
-              <input type="text" id="fpsROutput" class="form-control" readonly="readonly" />
+              <input type="text" id="fpsROutput" class="form-control border-secondary" readonly="readonly" />
               <div class="input-group-append">
                 <button type="button" class="btn btn-outline-secondary" id="fpsRCopyButton">Copy</button>
               </div>
@@ -77,6 +77,7 @@
           </div>
         </div>
       </form>
+
       <footer class="my-5 text-center text-muted">
         <p><small>&copy; 2019 <a href="https://github.com/neofuji">Toru Higuruma</a></small></p>
         <p><small><a href="https://github.com/neofuji/bpm2fps">Source Code</a> (Apache License 2.0)</small></p>
