--- a/index.html
+++ b/index.html
@@ -39,18 +39,23 @@
           <label for="bpmInput" class="col-sm-3 col-form-label-lg">BPM</label>
           <div class="col-sm">
             <input type="number" id="bpmInput" class="form-control form-control-lg" value="100" min="1" placeholder="100" autofocus="autofocus" />
+            <small class="form-text text-muted">Beats per minute</small>
           </div>
         </div>
         <div class="form-group row">
           <label for="divInput" class="col-sm-3 col-form-label">Beat Divider</label>
           <div class="col-sm">
             <input type="number" id="divInput" class="form-control" value="4" min="1" placeholder="4" />
+            <small class="form-text text-muted">Frames per beat becomes a multiple of this value</small>
           </div>
         </div>
         <div class="form-group row">
           <label for="minFpsInput" class="col-sm-3 col-form-label">Minimum FPS</label>
           <div class="col-sm">
             <input type="number" id="minFpsInput" class="form-control" value="30" min="1" placeholder="30" />
+            <small class="form-text text-muted">Output FPS satisfies this value
+              (commonly <a href="#" class="minFpsPreset" data-value="30">30 FPS</a>
+              or <a href="#" class="minFpsPreset" data-value="60">60 FPS</a>)</small>
           </div>
         </div>
         <hr />
@@ -99,6 +104,9 @@
       bpmInputElem.addEventListener("input", onChange);
       divInputElem.addEventListener("input", onChange);
       minFpsInputElem.addEventListener("input", onChange);
+      [].forEach.call(document.getElementsByClassName("minFpsPreset"), function (elem) {
+        elem.addEventListener("click", onClickMinFpsPreset);
+      });
       fpsCopyButtonElem.addEventListener("click", onClickFpsCopy);
       fpsRCopyButtonElem.addEventListener("click", onClickFpsRCopy);
       onChange(null);
@@ -110,6 +118,12 @@
         var framesPerBeat = Math.ceil(60 * minFps / bpm / divider) * divider;
         fpsOutputElem.value = bpm * framesPerBeat / 60 || "";
         fpsROutputElem.value = (bpm * framesPerBeat || "") + "/60";
+      }
+
+      function onClickMinFpsPreset(event) {
+        event.preventDefault();
+        minFpsInputElem.value = event.target.getAttribute("data-value");
+        onChange(null);
       }
 
       function onClickFpsCopy(event) {
