--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       </form>
 
       <footer class="my-5 text-center text-muted">
-        <p><small>&copy; 2019 <a href="https://github.com/neofuji">Toru Higuruma</a></small></p>
-        <p><small><a href="https://github.com/neofuji/bpm2fps">Source Code</a> (Apache License 2.0)</small></p>
+        <p><small>&copy; 2019 <a href="https://github.com/neofuji" rel="me" target="_blank">Toru Higuruma</a></small></p>
+        <p><small><a href="https://github.com/neofuji/bpm2fps" target="_blank">Source Code</a> (Apache License 2.0)</small></p>
       </footer>
     </div>
 
