Fix rational label

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="fpsROutput" class="col-sm-3 col-form-label">FPS &#x211A;</label>
+          <label for="fpsROutput" class="col-sm-3 col-form-label">FPS (Rational)</label>
           <div class="col-sm">
             <div class="input-group">
               <input type="text" id="fpsROutput" class="form-control border-secondary" readonly="readonly" />
